<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dp_24"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/text_view_photo_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ambil_foto_mata_kamu"
        android:textSize="@dimen/sp_20"
        android:textColor="@color/text_color_dark"
        android:fontFamily="@font/montserrat_regular"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageButton
        android:id="@+id/btn_pick_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_camera_24"
        android:padding="@dimen/dp_24"
        android:background="@drawable/bg_pick"
        android:layout_marginTop="@dimen/dp_32"
        app:layout_constraintTop_toBottomOf="@id/text_view_photo_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/text_view_camera"
        tools:ignore="ContentDescription"
        app:tint="@color/color_primary" />

    <TextView
        android:id="@+id/text_view_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        android:textSize="@dimen/sp_14"
        android:textColor="@color/text_color_primary"
        android:fontFamily="@font/montserrat_regular"
        android:layout_marginTop="@dimen/dp_8"
        app:layout_constraintTop_toBottomOf="@id/btn_pick_camera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/btn_pick_camera"
        app:layout_constraintEnd_toEndOf="@id/btn_pick_camera"/>

    <ImageButton
        android:id="@+id/btn_pick_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_gallery"
        android:padding="@dimen/dp_24"
        android:background="@drawable/bg_pick"
        android:layout_marginStart="@dimen/dp_32"
        app:layout_constraintTop_toTopOf="@id/btn_pick_camera"
        app:layout_constraintStart_toEndOf="@id/btn_pick_camera"
        app:layout_constraintBottom_toTopOf="@id/text_view_gallery"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/text_view_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gallery"
        android:textSize="@dimen/sp_14"
        android:fontFamily="@font/montserrat_regular"
        android:layout_marginTop="@dimen/dp_8"
        android:textColor="@color/text_color_primary"
        app:layout_constraintTop_toBottomOf="@id/btn_pick_gallery"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/btn_pick_gallery"
        app:layout_constraintEnd_toEndOf="@id/btn_pick_gallery"/>

</androidx.constraintlayout.widget.ConstraintLayout>